--- a/client/views/layout/layout.html
+++ b/client/views/layout/layout.html
@@ -2,7 +2,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="apple-mobile-web-app-capable" content="yes" />	<title>
-		AntColony d.o.o Time tracking
+		AntColony Time tracking
 	</title>
 </head>
 <template name="layout">
@@ -30,7 +30,7 @@
 						</span>
 					</button>
 					<a class="navbar-brand" href="#">
-						AntColony d.o.o Time tracking
+						AntColony Time tracking
 					</a>
 				</div>
 				<div id="menu" class="collapse navbar-collapse">
@@ -66,7 +66,7 @@
 						</span>
 					</button>
 					<a class="navbar-brand" href="#">
-						AntColony d.o.o Time tracking
+						AntColony Time tracking
 					</a>
 				</div>
 				<div id="menu" class="collapse navbar-collapse">
@@ -134,7 +134,7 @@
 						</span>
 					</button>
 					<a class="navbar-brand" href="#">
-						AntColony d.o.o Time tracking
+						AntColony Time tracking
 					</a>
 				</div>
 				<div id="menu" class="collapse navbar-collapse">
