--- a/client/views/home_private/home_private.html
+++ b/client/views/home_private/home_private.html
@@ -10,7 +10,7 @@
 			</div>
 		</div>
 		<p id="page_text">
-			Place for dashboard here...
+			We are ready for your tasks...
 		</p>
 	</div>
 </template>
