--- a/client/views/tasks/insert/insert.html
+++ b/client/views/tasks/insert/insert.html
@@ -78,7 +78,7 @@
 					Total Hours
 				</label>
 				<div class="input-div">
-					<input type="text" name="totalHours" value="" class="form-control " data-type="float">
+					<input type="text" name="totalHours" value="" class="form-control " data-type="float" required="required">
 					<span id="help-text" class="help-block">
 					</span>
 					<span id="error-text" class="help-block">
@@ -90,7 +90,7 @@
 					Description
 				</label>
 				<div class="input-div">
-					<input type="text" name="description" value="" class="form-control " data-type="string">
+					<input type="text" name="description" value="" class="form-control " data-type="string" required="required">
 					<span id="help-text" class="help-block">
 					</span>
 					<span id="error-text" class="help-block">
