--- a/client/views/projects/insert/insert.html
+++ b/client/views/projects/insert/insert.html
@@ -63,7 +63,7 @@
 				</label>
 				<div class="input-div">
 					<div class="input-group date">
-						<input type="text" name="endDate" value="" class="form-control " data-type="date">
+						<input type="text" name="endDate" value="" class="form-control " data-type="date" required>
 						<span class="input-group-addon">
 							<i class="fa fa-calendar">
 							</i>
@@ -80,7 +80,7 @@
 					Note
 				</label>
 				<div class="input-div">
-					<textarea class="form-control " name="note"></textarea>
+					<textarea class="form-control " name="note" required></textarea>
 					<span id="help-text" class="help-block">
 					</span>
 					<span id="error-text" class="help-block">
