Creating profile for FC Mitjylland that will be able to monitor tasks

--- a/client/styles/styles/styles.less
+++ b/client/styles/styles/styles.less
@@ -21,6 +21,18 @@ h6 a, h6 a:hover {
 	text-decoration: none;
 }
 
+// Additional css:
+
+.navbar-brand {
+  padding: 0px;
+}
+
+.navbar-brand img {
+  height: 40px;
+  margin-top: 10px;
+  margin-right: 10px;
+}
+
 /* Wrapper for page content to push down footer */
 .sticky-wrapper {
   min-height: 100%;
@@ -123,7 +135,7 @@ p {
 }
 
 .menu-item-collapse div.collapse li a {
-	padding-right: 5px;	
+	padding-right: 5px;
 }
 
 .menu-hide-text .item-title {
@@ -153,7 +165,7 @@ p {
 .accounts-info-box {
 	max-width: 400px;
 	padding: 15px;
-	margin: 0 auto;	
+	margin: 0 auto;
 }
 
 /* ------------------ */
@@ -172,7 +184,7 @@ p {
 }
 
 .th-sortable {
-	cursor: pointer;	
+	cursor: pointer;
 }
 
 .table-hover tr {
@@ -206,15 +218,15 @@ ul.object-tree li a {
 }
 
 ul.object-tree {
-	padding-left: 10px;	
+	padding-left: 10px;
 }
 
 ul.object-tree ul.object-tree {
-	padding-left: 20px;	
+	padding-left: 20px;
 }
 
 li.collapsed ul {
-	display: none;	
+	display: none;
 }
 
 li.active > a > span.text-muted {
