--- a/client/views/home_private/home_private.html
+++ b/client/views/home_private/home_private.html
@@ -1,4 +1,5 @@
 <template name="HomePrivate">
+	{{#if userIsKemal}}
 	<div class="page-container container" id="content">
 		<div class="row" id="title_row">
 			<div class="col-md-12">
@@ -10,8 +11,155 @@
 			</div>
 		</div>
 		<p id="page_text">
-			We are ready for your tasks...
+			Here you can track all tasks and their time to deliver related to your project
 		</p>
+		{{> TasksViewKemal}}
+	</div>
+	{{else}}
+		<div class="page-container container" id="content">
+			<div class="row" id="title_row">
+				<div class="col-md-12">
+					<h2 id="page_title" class="pull-left">
+						Welcome {{userFullName}}!
+					</h2>
+					<div id="page_menu" class="pull-right">
+					</div>
+				</div>
+			</div>
+			<p id="page_text">
+				We are ready for your tasks...
+			</p>
+		</div>
+	{{/if}}
+</template>
+
+<template name="TasksViewKemal">
+	<div id="tasks-view" class="">
+		<h2 id="component-title">
+			Tasks
+		</h2>
+		<form id="dataview-controls" class="form-inline">
+			<div id="dataview-controls-search">
+				{{#if isNotEmpty}}
+				<div id="dataview-controls-search-group" class="form-group">
+					<label class="sr-only" for="search">
+						Search
+					</label>
+					<input type="text" class="form-control" id="dataview-search-input" placeholder="Search" name="search" value="{{searchString}}" autofocus="autofocus">
+					<button type="button" id="dataview-search-button" class="btn btn-primary">
+						<span class="fa fa-search">
+						</span>
+					</button>
+				</div>
+				{{/if}}
+			</div>
+			<div id="dataview-controls-export" class="form-group">
+				{{#if isNotEmpty}}
+		{{#if isFound}}
+				<div>
+				</div>
+				{{else}}
+				<div class="btn-group">
+					<button type="button" class="btn btn-default" id="dataview-export-default">
+						Export
+					</button>
+					<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+						<span class="caret">
+						</span>
+					</button>
+					<ul class="dropdown-menu" role="menu">
+						<li>
+							<a href="#" id="dataview-export-csv">
+								Export to CSV
+							</a>
+						</li>
+						<li>
+							<a href="#" id="dataview-export-tsv">
+								Export to TSV
+							</a>
+						</li>
+						<li>
+							<a href="#" id="dataview-export-json">
+								Export to JSON
+							</a>
+						</li>
+					</ul>
+				</div>
+				{{/if}}
+	{{/if}}
+			</div>
+		</form>
+		{{#if isNotEmpty}}
+			{{#if isNotFound}}
+		<div class="alert alert-warning">
+			"{{searchString}}" not found.
+		</div>
+		{{else}}
+		<div id="dataview-data">
+			{{#if viewAsTable}} {{> TasksViewKemalTable}} {{/if}}
+		</div>
+		{{/if}}
+		{{else}}
+		<div class="alert alert-info">
+			No tasks :(
+		</div>
+		{{/if}}
 	</div>
 </template>
 
+<template name="TasksViewKemalTable">
+	<table id="dataview-table" class="table table-striped table-hover">
+		<thead id="dataview-table-header">
+			<tr id="dataview-table-header-row">
+				<th class="th-sortable" data-sort="taskNumber">
+					Task number
+				</th>
+				<th class="th-sortable" data-sort="date">
+					Task date
+				</th>
+				<th class="th-sortable" data-sort="project.name">
+					Project
+				</th>
+				<th class="th-sortable" data-sort="totalHours">
+					Total Hours
+				</th>
+				<th class="th-sortable" data-sort="description">
+					Description
+				</th>
+				<th>
+					&nbsp;
+				</th>
+				<th>
+					&nbsp;
+				</th>
+			</tr>
+		</thead>
+		<tbody id="dataview-table-items">
+			{{#each tableItems}} {{> TasksViewKemalTableItems}} {{/each}}
+		</tbody>
+	</table>
+</template>
+
+<template name="TasksViewKemalTableItems">
+	<tr id="dataview-table-items-row">
+		<td>
+			{{taskNumber}}
+		</td>
+		<td>
+			{{formatDate date 'MM-DD-YYYY'}}
+		</td>
+		<td>
+			{{project.name}}
+		</td>
+		<td>
+			{{totalHours}}
+		</td>
+		<td>
+			{{description}}
+		</td>
+		<td class="td-icon">
+		</td>
+		<td class="td-icon">
+		</td>
+	</tr>
+</template>
