--- a/client/views/layout/layout.html
+++ b/client/views/layout/layout.html
@@ -30,7 +30,7 @@
 						</span>
 					</button>
 					<a class="navbar-brand" href="#">
-						AntColony Time tracking
+						<img src="/ant_logo.png" />
 					</a>
 				</div>
 				<div id="menu" class="collapse navbar-collapse">
@@ -66,7 +66,7 @@
 						</span>
 					</button>
 					<a class="navbar-brand" href="#">
-						AntColony Time tracking
+						<img src="/ant_logo.png" />
 					</a>
 				</div>
 				<div id="menu" class="collapse navbar-collapse">
@@ -134,7 +134,7 @@
 						</span>
 					</button>
 					<a class="navbar-brand" href="#">
-						AntColony Time tracking
+						<img src="/ant_logo.png" />
 					</a>
 				</div>
 				<div id="menu" class="collapse navbar-collapse">
@@ -163,6 +163,8 @@
 				</span>
 			</a>
 		</li>
+		{{#if userIsKemal}}
+		{{else}}
 		<li id="menu-item-simple" class="{{menuItemClass 'tasks'}}">
 			<a href="{{pathFor 'tasks'}}">
 				<span class="item-title">
@@ -170,7 +172,8 @@
 				</span>
 			</a>
 		</li>
-        {{#if isInRole 'admin'}}
+		{{/if}}
+		{{#if isInRole 'admin'}}
 		<li id="menu-item-simple" class="{{menuItemClass 'projects'}}">
 			<a href="{{pathFor 'projects'}}">
 				<span class="item-title">
@@ -218,4 +221,3 @@
 		</li>
 	</ul>
 </template>
-
